--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -112,6 +112,7 @@ blocks:
             - pip3 install testfixtures sympy mpmath jupyter matplotlib scipy nrpylatex
             - git clone https://github.com/zachetienne/nrpytutorial.git
             - cd nrpytutorial
+            - ipython --log-level=DEBUG in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy-1D_tests.py
             - ./UnitTesting/core_Jupyter_notebook_testsuite_GiRonly.sh
   # - name: "SymPy1.3, Ubuntu Linux Bionic Python 2.7.18 (earliest versions supported by UnitTests)"
   #   dependencies: []
