--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -105,7 +105,7 @@ blocks:
         - name: "GiRaFFE JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 3.8.3 (Default Python 3 in Ubuntu Bionic + latest stable SymPy)"
           commands:
             - sudo apt-get update
-            - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev
+            - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc8 g++8 g++8-multilib libgsl-dev
             - sem-version python 3.8
             - export PATH=$PATH:/home/semaphore/.local/bin
             - pip3 install -U pip setuptools
@@ -146,7 +146,7 @@ blocks:
         - name: "Ubuntu Linux Bionic pypy2 (default PyPy in Ubuntu Bionic)"
           commands:
             - sudo apt-get update
-            - sudo apt-get -y install pypy texlive-latex-base pandoc colordiff gcc8 g++8 g++8-multilib libgsl-dev
+            - sudo apt-get -y install pypy texlive-latex-base pandoc colordiff libgsl-dev
             - pypy -mpip install -U sympy mpmath testfixtures nrpylatex
             - export PATH=$PATH:/home/semaphore/.local/bin
             - pypy --version
