--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -101,11 +101,15 @@ blocks:
   - name: "GiRaFFE JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 3.8.3 (Default Python 3 in Ubuntu Bionic + latest stable SymPy)"
     dependencies: []
     task:
+      agent:
+        machine:
+          type: e1-standard-2
+          os_image: ubuntu2004
       jobs:
         - name: "GiRaFFE JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 3.8.3 (Default Python 3 in Ubuntu Bionic + latest stable SymPy)"
           commands:
             - sudo apt-get update
-            - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc8 g++8 g++8-multilib libgsl-dev
+            - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc g++ libgsl-dev
             - sem-version python 3.8
             - export PATH=$PATH:/home/semaphore/.local/bin
             - pip3 install -U pip setuptools
