--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -152,7 +152,8 @@ blocks:
           commands:
             - sudo apt-get update
             - sudo apt-get -y install pypy texlive-latex-base pandoc colordiff libgsl-dev
-            - pypy -m ensurepip
+            - wget https://bootstrap.pypa.io/get-pip.py
+            - pypy get-pip.py
             - pypy -mpip install -U pip wheel
             - pypy -mpip install -U sympy mpmath testfixtures nrpylatex
             - export PATH=$PATH:/home/semaphore/.local/bin
