--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -12,92 +12,92 @@ agent:
 #      image: 'registry.semaphoreci.com/python:3.9'
 
 blocks:
-  # - name: "JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 3.9.x (Latest Python 3.9 in Ubuntu Bionic + latest stable SymPy)"
+  - name: "JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 3.9.x (Latest Python 3.9 in Ubuntu Bionic + latest stable SymPy)"
+    dependencies: []
+    task:
+      jobs:
+        - name: "JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 3.9.x (Latest Python 3.9 in Ubuntu Bionic + latest stable SymPy)"
+          commands:
+            - sudo apt-get update
+            - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev
+            - sem-version python 3.9
+            - python3 --version
+            - export PATH=$PATH:/home/semaphore/.local/bin
+            - pip3 install -U pip setuptools
+            - pip3 install testfixtures sympy mpmath jupyter matplotlib scipy nrpylatex
+            - git clone https://github.com/zachetienne/nrpytutorial.git
+            - cd nrpytutorial
+            - ./UnitTesting/core_Jupyter_notebook_testsuite.sh
+  - name: "JUPYTER NOTEBOOK TESTS: SymPy-1.2 Ubuntu Linux Bionic Python 2.7.17 (oldest SymPy version tested/supported by NRPy+ [ref metric])"
+    dependencies: []
+    task:
+      jobs:
+        - name: "JUPYTER NOTEBOOK TESTS: SymPy-1.2 Ubuntu Linux Bionic Python 2.7.17 (oldest SymPy version tested/supported by NRPy+ [ref metric])"
+          commands:
+            - sudo apt-get update
+            - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev
+            - sem-version python 2.7
+            - python2 --version
+            - export PATH=$PATH:/home/semaphore/.local/bin
+            - pip install -U pip setuptools
+            - pip install testfixtures sympy mpmath jupyter matplotlib scipy nrpylatex
+            - git clone https://github.com/zachetienne/nrpytutorial.git
+            - cd nrpytutorial
+            - ./UnitTesting/core_Jupyter_notebook_testsuite.sh
+  - name: "JUPYTER NOTEBOOK TESTS: Ubuntu Linux Focal CPython 3.8.5 (Default Python 3 in Ubuntu Focal + latest stable SymPy)"
+    dependencies: []
+    task:
+      agent:
+        machine:
+          type: e1-standard-2
+          os_image: ubuntu2004
+      jobs:
+        - name: "JUPYTER NOTEBOOK TESTS: Ubuntu Linux Focal CPython 3.8.5 (Default Python 3 in Ubuntu Focal + latest stable SymPy)"
+          commands:
+            - sudo apt-get update
+            - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev
+            - python3 --version
+            - export PATH=$PATH:/home/semaphore/.local/bin
+            - pip3 install -U pip setuptools
+            - pip3 install testfixtures sympy mpmath jupyter matplotlib scipy nrpylatex
+            - git clone https://github.com/zachetienne/nrpytutorial.git
+            - cd nrpytutorial
+            - ./UnitTesting/core_Jupyter_notebook_testsuite.sh
+  - name: "JUPYTER NOTEBOOK TESTS: Ubuntu Linux Focal CPython 3.8.5 (Default Python 3 in Ubuntu Focal + latest DEVEL SymPy)"
+    dependencies: []
+    task:
+      agent:
+        machine:
+          type: e1-standard-2
+          os_image: ubuntu2004
+      jobs:
+        - name: "JUPYTER NOTEBOOK TESTS: Ubuntu Linux Focal CPython 3.8.5 (Default Python 3 in Ubuntu Focal + latest DEVEL SymPy)"
+          commands:
+            - sudo apt-get update
+            - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev
+            - python3 --version
+            - export PATH=$PATH:/home/semaphore/.local/bin
+            - pip3 install -U pip setuptools
+            - pip3 install testfixtures mpmath jupyter matplotlib scipy nrpylatex
+            - pip3 install -U git+https://github.com/sympy/sympy/
+            - git clone https://github.com/zachetienne/nrpytutorial.git
+            - cd nrpytutorial
+            - ./UnitTesting/core_Jupyter_notebook_testsuite.sh
+  # - name: "S2F JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 3.8.3 (Default Python 3 in Ubuntu Bionic + latest stable SymPy)"
   #   dependencies: []
   #   task:
   #     jobs:
-  #       - name: "JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 3.9.x (Latest Python 3.9 in Ubuntu Bionic + latest stable SymPy)"
+  #       - name: "S2F JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 3.8.3 (Default Python 3 in Ubuntu Bionic + latest stable SymPy)"
   #         commands:
   #           - sudo apt-get update
   #           - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev
-  #           - sem-version python 3.9
-  #           - python3 --version
+  #           - sem-version python 3.8
   #           - export PATH=$PATH:/home/semaphore/.local/bin
   #           - pip3 install -U pip setuptools
   #           - pip3 install testfixtures sympy mpmath jupyter matplotlib scipy nrpylatex
   #           - git clone https://github.com/zachetienne/nrpytutorial.git
   #           - cd nrpytutorial
-  #           - ./UnitTesting/core_Jupyter_notebook_testsuite.sh
-  # - name: "JUPYTER NOTEBOOK TESTS: SymPy-1.2 Ubuntu Linux Bionic Python 2.7.17 (oldest SymPy version tested/supported by NRPy+ [ref metric])"
-  #   dependencies: []
-  #   task:
-  #     jobs:
-  #       - name: "JUPYTER NOTEBOOK TESTS: SymPy-1.2 Ubuntu Linux Bionic Python 2.7.17 (oldest SymPy version tested/supported by NRPy+ [ref metric])"
-  #         commands:
-  #           - sudo apt-get update
-  #           - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev
-  #           - sem-version python 2.7
-  #           - python2 --version
-  #           - export PATH=$PATH:/home/semaphore/.local/bin
-  #           - pip install -U pip setuptools
-  #           - pip install testfixtures sympy mpmath jupyter matplotlib scipy nrpylatex
-  #           - git clone https://github.com/zachetienne/nrpytutorial.git
-  #           - cd nrpytutorial
-  #           - ./UnitTesting/core_Jupyter_notebook_testsuite.sh
-  # - name: "JUPYTER NOTEBOOK TESTS: Ubuntu Linux Focal CPython 3.8.5 (Default Python 3 in Ubuntu Focal + latest stable SymPy)"
-  #   dependencies: []
-  #   task:
-  #     agent:
-  #       machine:
-  #         type: e1-standard-2
-  #         os_image: ubuntu2004
-  #     jobs:
-  #       - name: "JUPYTER NOTEBOOK TESTS: Ubuntu Linux Focal CPython 3.8.5 (Default Python 3 in Ubuntu Focal + latest stable SymPy)"
-  #         commands:
-  #           - sudo apt-get update
-  #           - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev
-  #           - python3 --version
-  #           - export PATH=$PATH:/home/semaphore/.local/bin
-  #           - pip3 install -U pip setuptools
-  #           - pip3 install testfixtures sympy mpmath jupyter matplotlib scipy nrpylatex
-  #           - git clone https://github.com/zachetienne/nrpytutorial.git
-  #           - cd nrpytutorial
-  #           - ./UnitTesting/core_Jupyter_notebook_testsuite.sh
-  # - name: "JUPYTER NOTEBOOK TESTS: Ubuntu Linux Focal CPython 3.8.5 (Default Python 3 in Ubuntu Focal + latest DEVEL SymPy)"
-  #   dependencies: []
-  #   task:
-  #     agent:
-  #       machine:
-  #         type: e1-standard-2
-  #         os_image: ubuntu2004
-  #     jobs:
-  #       - name: "JUPYTER NOTEBOOK TESTS: Ubuntu Linux Focal CPython 3.8.5 (Default Python 3 in Ubuntu Focal + latest DEVEL SymPy)"
-  #         commands:
-  #           - sudo apt-get update
-  #           - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev
-  #           - python3 --version
-  #           - export PATH=$PATH:/home/semaphore/.local/bin
-  #           - pip3 install -U pip setuptools
-  #           - pip3 install testfixtures mpmath jupyter matplotlib scipy nrpylatex
-  #           - pip3 install -U git+https://github.com/sympy/sympy/
-  #           - git clone https://github.com/zachetienne/nrpytutorial.git
-  #           - cd nrpytutorial
-  #           - ./UnitTesting/core_Jupyter_notebook_testsuite.sh
-  # # - name: "S2F JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 3.8.3 (Default Python 3 in Ubuntu Bionic + latest stable SymPy)"
-  # #   dependencies: []
-  # #   task:
-  # #     jobs:
-  # #       - name: "S2F JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 3.8.3 (Default Python 3 in Ubuntu Bionic + latest stable SymPy)"
-  # #         commands:
-  # #           - sudo apt-get update
-  # #           - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev
-  # #           - sem-version python 3.8
-  # #           - export PATH=$PATH:/home/semaphore/.local/bin
-  # #           - pip3 install -U pip setuptools
-  # #           - pip3 install testfixtures sympy mpmath jupyter matplotlib scipy nrpylatex
-  # #           - git clone https://github.com/zachetienne/nrpytutorial.git
-  # #           - cd nrpytutorial
-  # #           - ./UnitTesting/core_Jupyter_notebook_testsuite_S2Fonly.sh
+  #           - ./UnitTesting/core_Jupyter_notebook_testsuite_S2Fonly.sh
   - name: "GiRaFFE JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 3.8.3 (Default Python 3 in Ubuntu Bionic + latest stable SymPy)"
     dependencies: []
     task:
@@ -119,31 +119,31 @@ blocks:
             - cd nrpytutorial
             - ipython --log-level=DEBUG in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy-1D_tests.py
             - ./UnitTesting/core_Jupyter_notebook_testsuite_GiRonly.sh
-  # - name: "SymPy1.3, Ubuntu Linux Bionic Python 2.7.18 (earliest versions supported by UnitTests)"
-  #   dependencies: []
-  #   task:
-  #     jobs:
-  #       - name: "SymPy1.3, Ubuntu Linux Bionic Python 2.7.18 (earliest versions supported by UnitTests)"
-  #         commands:
-  #           - sem-version python 2.7
-  #           - pip install -U pip setuptools
-  #           - pip install sympy==1.3 mpmath testfixtures nrpylatex
-  #           - python2 --version
-  #           - git clone https://github.com/zachetienne/nrpytutorial.git
-  #           - cd nrpytutorial
-  #           - ./UnitTesting/run_NRPy_UnitTests.sh python2
-  # - name: "Ubuntu Linux Bionic Python 3.8.3 (default Python 3 in Ubuntu Bionic)"
-  #   dependencies: []
-  #   task:
-  #     jobs:
-  #       - name: "Ubuntu Linux Bionic Python 3.8.3 (default Python 3 in Ubuntu Bionic)"
-  #         commands:
-  #           - pip3 install -U pip setuptools
-  #           - pip3 install sympy mpmath testfixtures nrpylatex
-  #           - python3 --version
-  #           - git clone https://github.com/zachetienne/nrpytutorial.git
-  #           - cd nrpytutorial
-  #           - ./UnitTesting/run_NRPy_UnitTests.sh python3
+  - name: "SymPy1.3, Ubuntu Linux Bionic Python 2.7.18 (earliest versions supported by UnitTests)"
+    dependencies: []
+    task:
+      jobs:
+        - name: "SymPy1.3, Ubuntu Linux Bionic Python 2.7.18 (earliest versions supported by UnitTests)"
+          commands:
+            - sem-version python 2.7
+            - pip install -U pip setuptools
+            - pip install sympy==1.3 mpmath testfixtures nrpylatex
+            - python2 --version
+            - git clone https://github.com/zachetienne/nrpytutorial.git
+            - cd nrpytutorial
+            - ./UnitTesting/run_NRPy_UnitTests.sh python2
+  - name: "Ubuntu Linux Bionic Python 3.8.3 (default Python 3 in Ubuntu Bionic)"
+    dependencies: []
+    task:
+      jobs:
+        - name: "Ubuntu Linux Bionic Python 3.8.3 (default Python 3 in Ubuntu Bionic)"
+          commands:
+            - pip3 install -U pip setuptools
+            - pip3 install sympy mpmath testfixtures nrpylatex
+            - python3 --version
+            - git clone https://github.com/zachetienne/nrpytutorial.git
+            - cd nrpytutorial
+            - ./UnitTesting/run_NRPy_UnitTests.sh python3
   - name: "Ubuntu Linux Bionic pypy3 (default PyPy in Ubuntu Bionic)"
     dependencies: []
     task:
@@ -162,15 +162,15 @@ blocks:
             - git clone https://github.com/zachetienne/nrpytutorial.git
             - cd nrpytutorial
             - ./UnitTesting/run_NRPy_UnitTests.sh pypy3
-  # - name: "SymPy-dev, Ubuntu Linux Bionic Python 3.8.3 (default Python 3 in Ubuntu Bionic)"
-  #   dependencies: []
-  #   task:
-  #     jobs:
-  #       - name: "Ubuntu Linux Bionic Python 3.8.3 (default Python 3 in Ubuntu Bionic)"
-  #         commands:
-  #           - python3 --version
-  #           - pip3 install -U pip setuptools mpmath testfixtures
-  #           - pip3 install pip install -U git+https://github.com/sympy/sympy/ nrpylatex
-  #           - git clone https://github.com/zachetienne/nrpytutorial.git
-  #           - cd nrpytutorial
-  #           - ./UnitTesting/run_NRPy_UnitTests.sh python3
+  - name: "SymPy-dev, Ubuntu Linux Bionic Python 3.8.3 (default Python 3 in Ubuntu Bionic)"
+    dependencies: []
+    task:
+      jobs:
+        - name: "Ubuntu Linux Bionic Python 3.8.3 (default Python 3 in Ubuntu Bionic)"
+          commands:
+            - python3 --version
+            - pip3 install -U pip setuptools mpmath testfixtures
+            - pip3 install pip install -U git+https://github.com/sympy/sympy/ nrpylatex
+            - git clone https://github.com/zachetienne/nrpytutorial.git
+            - cd nrpytutorial
+            - ./UnitTesting/run_NRPy_UnitTests.sh python3
