.pylintrc: Ignore missing-docstring, as they are unnecessary in Jupyter notebooks

--- a/.pylintrc
+++ b/.pylintrc
@@ -79,6 +79,7 @@ disable=too-many-arguments,redefined-outer-name,wrong-import-position,too-many-l
         line-too-long,              # ADDED
         bad-whitespace,             # ADDED
         global-variable-undefined,  # ADDED
+        missing-docstring,          # ADDED
         print-statement,
         parameter-unpacking,
         unpacking-in-except,
