--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -19,7 +19,7 @@ blocks:
         - name: "JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 3.9.x (Latest Python 3.9 in Ubuntu Bionic + latest stable SymPy)"
           commands:
             - sudo apt-get update
-            - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev
+            - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev ffmpeg
             - sem-version python 3.9
             - python3 --version
             - export PATH=$PATH:/home/semaphore/.local/bin
@@ -35,7 +35,7 @@ blocks:
         - name: "JUPYTER NOTEBOOK TESTS: SymPy-1.2 Ubuntu Linux Bionic Python 2.7.17 (oldest SymPy version tested/supported by NRPy+ [ref metric])"
           commands:
             - sudo apt-get update
-            - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev
+            - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev ffmpeg
             - sem-version python 2.7
             - python2 --version
             - export PATH=$PATH:/home/semaphore/.local/bin
@@ -55,7 +55,7 @@ blocks:
         - name: "JUPYTER NOTEBOOK TESTS: Ubuntu Linux Focal CPython 3.8.5 (Default Python 3 in Ubuntu Focal + latest stable SymPy)"
           commands:
             - sudo apt-get update
-            - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev
+            - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev ffmpeg
             - python3 --version
             - export PATH=$PATH:/home/semaphore/.local/bin
             - pip3 install -U pip setuptools
@@ -78,7 +78,7 @@ blocks:
             - python3 --version
             - export PATH=$PATH:/home/semaphore/.local/bin
             - pip3 install -U pip setuptools
-            - pip3 install testfixtures mpmath jupyter matplotlib scipy nrpylatex
+            - pip3 install testfixtures mpmath jupyter matplotlib scipy nrpylatex ffmpeg
             - pip3 install -U git+https://github.com/sympy/sympy/
             - git clone https://github.com/zachetienne/nrpytutorial.git
             - cd nrpytutorial
@@ -90,7 +90,7 @@ blocks:
   #       - name: "S2F JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 3.8.3 (Default Python 3 in Ubuntu Bionic + latest stable SymPy)"
   #         commands:
   #           - sudo apt-get update
-  #           - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev
+  #           - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev ffmpeg
   #           - sem-version python 3.8
   #           - export PATH=$PATH:/home/semaphore/.local/bin
   #           - pip3 install -U pip setuptools
@@ -114,7 +114,7 @@ blocks:
             - sem-version python 3.8
             - export PATH=$PATH:/home/semaphore/.local/bin
             - pip3 install -U pip setuptools
-            - pip3 install testfixtures sympy mpmath jupyter matplotlib scipy nrpylatex
+            - pip3 install testfixtures sympy mpmath jupyter matplotlib scipy nrpylatex ffmpeg
             - git clone https://github.com/zachetienne/nrpytutorial.git
             - cd nrpytutorial
             - ./UnitTesting/core_Jupyter_notebook_testsuite_GiRonly.sh
