--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -74,11 +74,11 @@ blocks:
         - name: "JUPYTER NOTEBOOK TESTS: Ubuntu Linux Focal CPython 3.8.5 (Default Python 3 in Ubuntu Focal + latest DEVEL SymPy)"
           commands:
             - sudo apt-get update
-            - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev
+            - sudo apt-get -y install texlive-latex-base pandoc colordiff gcc libgsl-dev ffmpeg
             - python3 --version
             - export PATH=$PATH:/home/semaphore/.local/bin
             - pip3 install -U pip setuptools
-            - pip3 install testfixtures mpmath jupyter matplotlib scipy nrpylatex ffmpeg
+            - pip3 install testfixtures mpmath jupyter matplotlib scipy nrpylatex
             - pip3 install -U git+https://github.com/sympy/sympy/
             - git clone https://github.com/zachetienne/nrpytutorial.git
             - cd nrpytutorial
@@ -109,12 +109,12 @@ blocks:
         - name: "GiRaFFE JUPYTER NOTEBOOK TESTS: Ubuntu Linux Bionic CPython 3.8.3 (Default Python 3 in Ubuntu Bionic + latest stable SymPy)"
           commands:
             - sudo apt-get update
-            - sudo apt-get -y install texlive-latex-base pandoc colordiff libgsl-dev
+            - sudo apt-get -y install texlive-latex-base pandoc colordiff libgsl-dev ffmpeg
             - gcc --version
             - sem-version python 3.8
             - export PATH=$PATH:/home/semaphore/.local/bin
             - pip3 install -U pip setuptools
-            - pip3 install testfixtures sympy mpmath jupyter matplotlib scipy nrpylatex ffmpeg
+            - pip3 install testfixtures sympy mpmath jupyter matplotlib scipy nrpylatex
             - git clone https://github.com/zachetienne/nrpytutorial.git
             - cd nrpytutorial
             - ./UnitTesting/core_Jupyter_notebook_testsuite_GiRonly.sh
